# cheviot

./: .gitignore  CMakeLists.txt  Makefile  build-kernel-img.sh  mk-patch.sh  readme.md  readme.txt  setup-env.sh
boot/: arm.h  arm.s  block.h  bootinfo.h  bootstrap.c  bootstrap.h  dbg.h  dbgfont.c  debug.c  doprintf.c  elf.c  elf.h  emmc.c  fat.c  fat.h  globals.c  globals.h  linker.ls  lists.h  main.c  makefile.in  memory.c  memory.h  mmio.c  module.c  module.h  root.c  root.h  start.s  string.h  timer.h  types.h
docs/: build.md  system_calls.txt
executive/: armelf.x  elf.h  exec  filesystem.h  linker.ls  main.c  main.cc  makefile.in  relocatable.h  system.cc  types.h
filesys/: buffer.cc  filedesc.cc  filesystem.h  globals.cc  lookup.cc  main.cc  makefile.in  vnode.cc
hal/: .txt  Makefile.am  Makefile.in  configure  configure.ac
hal/libhal_rpi_1/: Makefile.am  hal_aux_uart.c  hal_gpio.c  hal_interrupt.c  hal_mailbox.c  hal_memory.c  hal_mmio.c  hal_pl011_uart.c  hal_timer.c  hal_videocore.c
hal/libhal_rpi_1/machine/: raspberry_pi_hal.h
hal/libhal_rpi_1/machine/board/: hal_aux.h  hal_gpio.h  hal_interrupt.h  hal_mailbox.h  hal_mmio.h  hal_pl001_uart.h  hal_reg_base.h  hal_timer.h
hostdirs/: Makefile.am  Makefile.in  configure.ac  configure~
kernel/: Makefile  Makefile.am  Makefile.in  config.guess  configure  configure.ac  depcomp  install-sh  makefile.in  missing
kernel/arm/: Makefile.am  arm.S  arm.s  daemons.c  dbgfont.c  debug.c  exception.c  getopts.c  globals.c  idle.c  init_arm.c  init_proc.c  init_root.c  init_vm.c  interrupt.c  kernelexit.c  linker.ls  main.c  makefile.in  pmap.c  proc.c  raspberry.c  signals.c  tasks.c  vectors.S
kernel/boards/raspberry_pi_1/: Makefile.am  arm.S  debug.c  exception.c  globals.c  init_arm.c  init_proc.c  init_vm.c  interrupt.c  main.c  pmap.c  raspberry.c  vectors.S
kernel/boards/raspberry_pi_1/h/kernel/board/: arm.h  boot.h  elf.h  globals.h  init.h  raspberry.h  task.h
kernel/boards/raspberry_pi_4/: Makefile.am  arm.S  debug.c  exception.c  globals.c  gpio.c  init_proc.c  init_root.c  init_vm.c  main.c  pmap.c  timer.c  vectors.S
kernel/boards/raspberry_pi_4/h/kernel/board/: arm.h  boot.h  globals.h  gpio.h  init.h
kernel/fs/: Makefile.am  access.c  block.c  cache.c  char.c  dir.c  dnlc.c  exec.c  filedesc.c  globals.c  handle.c  id.c  init.c  ioctl.c  kqueue.c  link.c  lookup.c  lookup_old.c  mount.c  mount_old.c  msg.c  open.c  pipe.c  poll.c  read.c  rename.c  seek.c  signal.c  stat.c  superblock.c  symlink.c  sync.c  truncate.c  vfs.c  vnode.c  write.c
kernel/h/kernel/: arch.h  dbg.h  elf.h  error.h  filesystem.h  globals.h  interrupt.h  kqueue.h  lists.h  msg.h  parcel.h  proc.h  signal.h  sysinfo.h  timer.h  types.h  utility.h  vm.h
kernel/h/kernel/arm/: arm.h  arm.i  boot.h  elf.h  globals.h  init.h  locks.h  macros.i  raspberry.h  task.h  task.i
kernel/proc/: event.c  exit.c  globals.c  handle.c  idle.c  info.c  interrupt.c  join.c  kill.c  makefile.in  msg.c  notification.c  proc.c  rendez.c  sched.c  signal.c  sysinfo.c  timer.c
kernel/utility/: doprintf.c  makefile.in  rand.c  snprintf.c  string.c  strlcat.c  strlcpy.c
kernel/vm/: Copy of segment.h  Copy of vm.h  Makefile.am  addessspace.c  area.c  as.c  iovec.c  lookup.c  makefile.in  page.c  pagefault.c  segment.c  segment_old_continuations.h  vm.c
lib/: Makefile.am  Makefile.in  configure  (+2 more)
system/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  configure~
system/boot/: Makefile  Makefile.am  Makefile.in  arm.S  arm.h  bootinfo.h  bootstrap.c  bootstrap.h  dbg.h  dbgfont.c  debug.c  doprintf.c  elf.c  elf.h  globals.c  globals.h  main.c  mbox.c  mbox.h  memory.c  memory.h  start.S  string.h  types.h  util.h
system/boot/boards/raspberry_pi_1/: arm.S  arm.h  arm_misc.c  debug_pl011_uart.c
system/boot/boards/raspberry_pi_4/: bootstrap.c  common.h  debug_mini_uart.c  debug_pl011_uart.c  init.c  led.c  led.h  memory.c  memory.h  peripheral_base.h  start.S
system/drivers/: Makefile  Makefile.am  Makefile.in
system/drivers/aux/: Makefile.am  Makefile.in  aux_uart.h  init.c  main.c
system/drivers/devfs/: Makefile.am  Makefile.in  devfs.h  globals.c  globals.h  init.c  main.c
system/drivers/fatfs/: Makefile  Makefile.am  Makefile.in  fat.h  globals.c  globals.h  init.c  main.c  sector.c
system/drivers/ifs/: Makefile  Makefile.am  Makefile.in  globals.c  globals.h  ifs.h  init.c  main.c
system/drivers/null/: Makefile.am  Makefile.in  main.c
system/drivers/random/: Makefile.in  init.c  main.c  random.h
system/drivers/sdcard/: Makefile  Makefile.am  Makefile.in  block.h  emmc.c  globals.c  globals.h  init.c  main.c  mbox.c  mbox.h  mmio.c  mmio.h  sdcard.h  timer.c  timer.h
system/drivers/sdcard/boards/raspberry_pi_1/: sdcard_hw_defs.h
system/drivers/sdcard/boards/raspberry_pi_4/: sdcard_hw_defs.h
system/drivers/serial/: Makefile  Makefile.am  Makefile.in  arm.S  globals.c  globals.h  init.c  main.c  pl011.h  serial.h
system/drivers/serial/boards/raspberry_pi_1/: init_pl011_uart.c  pl011_uart.c  uart_hw_defs.h
system/drivers/serial/boards/raspberry_pi_4/: init_mini_uart.c  mini_uart.c
system/drivers/videocore/: hal_videocore.c  hal_videocore.h  peripheral_base.h
system/etc/: Makefile.am  Makefile.in  profile  profile.ksh
system/filesystems/: Makefile.am  Makefile.in
system/filesystems/devfs/: Makefile.am  Makefile.in  devfs.h  globals.c  globals.h  init.c  main.c
system/filesystems/extfs/: Makefile.am  Makefile.in  bitmap.c  block.c  dir.c  dir_delete.c  dir_enter.c  dir_isempty.c  dir_lookup.c  ext2.h  globals.c  globals.h  group_descriptors.c  init.c  inode.c  inode_cache.c  link.c  main.c  ops_dir.c  ops_file.c  ops_link.c  ops_prot.c  read.c  readme.md  superblock.c  truncate.c  utility.c  write.c
system/filesystems/fatfs/: Makefile.in  fat.h  init.c
system/filesystems/ifs/: Makefile.am  Makefile.in  ifs.h  init.c  main.c
system/init/: Makefile.am  Makefile.in  init.h  main.c  startup.cfg
system/loader/: Makefile  main.c
system/readfile/: main.c
system/root/: main.c
(+87 files in other folders)
