AC_INIT([system],[1.0])
AM_INIT_AUTOMAKE([-Werror subdir-objects foreign])

AC_PROG_CC
AM_PROG_AS


AC_CONFIG_FILES([
  Makefile
  boot/Makefile
  drivers/Makefile
  drivers/devfs/Makefile
  drivers/fatfs/Makefile
  drivers/ifs/Makefile
  drivers/sdcard/Makefile
  drivers/serial/Makefile
  init/Makefile  
  ])
  
AC_OUTPUT

