
kernel_SOURCES += \
  arm/arm.S           \
  arm/debug.c         \
  arm/exception.c     \
  arm/globals.c       \
  arm/idle.c          \
  arm/init_arm.c      \
  arm/init_proc.c     \
  arm/init_root.c     \
  arm/init_vm.c       \
  arm/interrupt.c     \
  arm/main.c          \
  arm/pmap.c          \
  arm/proc.c          \
  arm/raspberry.c     \
  arm/signals.c       \
  arm/vectors.S

