

kernel_SOURCES += \
  fs/access.c \
  fs/block.c \
  fs/cache.c \
  fs/char.c \
  fs/dir.c \
  fs/dnlc.c \
  fs/exec.c \
  fs/handle.c \
  fs/id.c \
  fs/init.c \
  fs/ioctl.c \
  fs/link.c \
  fs/lookup.c \
  fs/mount.c \
  fs/msg.c \
  fs/open.c \
  fs/pipe.c \
  fs/poll.c \
  fs/read.c \
  fs/rename.c \
  fs/seek.c \
  fs/signal.c \
  fs/stat.c \
  fs/superblock.c \
  fs/symlink.c \
  fs/sync.c \
  fs/truncate.c \
  fs/vfs.c \
  fs/vnode.c \
  fs/write.c

